[tool.poetry]
name = "jenkins"
version = "0.1.0"
description = ""
authors = ["PawWitGit <git.pawelwitala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^4.7"
requests = "^2.28.1"
pytest = "^7.2.0"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
